--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,8 @@
     <!-- visualização portatil -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="sources/images/logos/logo02.png" type="image/x-icon">
+
     <!-- import css -->
     <link rel="stylesheet" href="sources/customs/import.css">
 
