--- a/produtos.html
+++ b/produtos.html
@@ -176,6 +176,7 @@
     <!-- section -->
     <section id="section-produtos">
 
+
         <!-- section-box -->
         <div class="section-box-produtos">
 
@@ -207,11 +208,13 @@
                                 <!-- card-title -->
                                 <h5 class="card-title">
                                     Radiante Lume
+                                    <br>
+                                    Expresso
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 24,99
                                 </h5>
 
                             </div>
@@ -239,11 +242,13 @@
                                 <!-- card-title -->
                                 <h5 class="card-title">
                                     Radiante Lume
+                                    <br>
+                                    Cacau
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 24,99
                                 </h5>
 
                             </div>
@@ -271,11 +276,13 @@
                                 <!-- card-title -->
                                 <h5 class="card-title">
                                     Radiante Lume
+                                    <br>
+                                    Avelã
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 24,99
                                 </h5>
 
                             </div>
@@ -303,11 +310,13 @@
                                 <!-- card-title -->
                                 <h5 class="card-title">
                                     Radiante Lume
+                                    <br>
+                                    Canela Escuro
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 24,99
                                 </h5>
 
                             </div>
@@ -328,7 +337,6 @@
 
         </div>
         <!-- section-box -->
-
 
 
         <!-- section-box -->
@@ -361,12 +369,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Matte Lume
+                                    <br>
+                                    Vamp
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 14,99
                                 </h5>
 
                             </div>
@@ -393,12 +403,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Matte Lume
+                                    <br>
+                                    Malva
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 14,99
                                 </h5>
 
                             </div>
@@ -425,12 +437,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Matte Lume
+                                    <br>
+                                    Amaro
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 14,99
                                 </h5>
 
                             </div>
@@ -457,12 +471,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Matte Lume
+                                    <br>
+                                    Eclipse
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 14,99
                                 </h5>
 
                             </div>
@@ -483,8 +499,6 @@
 
         </div>
         <!-- section-box -->
-
-
 
 
         <!-- section-box -->
@@ -517,12 +531,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Mark Lume
+                                    <br>
+                                    Grafite
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 34,99
                                 </h5>
 
                             </div>
@@ -549,12 +565,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Mark Lume
+                                    <br>
+                                    Terracota
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 34,99
                                 </h5>
 
                             </div>
@@ -581,12 +599,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Mark Lume
+                                    <br>
+                                    Celeste
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 34,99
                                 </h5>
 
                             </div>
@@ -613,12 +633,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Mark Lume
+                                    <br>
+                                    Urbano
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 34,99
                                 </h5>
 
                             </div>
@@ -639,7 +661,6 @@
 
         </div>
         <!-- section-box -->
-
 
 
         <!-- section-box -->
@@ -672,12 +693,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Neon Lume
+                                    <br>
+                                    Astro Luck
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 26,99
                                 </h5>
 
                             </div>
@@ -704,12 +727,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Neon Lume
+                                    <br>
+                                    Dourado Metalico
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 26,99
                                 </h5>
 
                             </div>
@@ -736,12 +761,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Neon Lume
+                                    <br>
+                                    Cristal
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 26,99
                                 </h5>
 
                             </div>
@@ -768,12 +795,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Neon Lume
+                                    <br>
+                                    Bronze Metalico
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 26,99
                                 </h5>
 
                             </div>
@@ -794,8 +823,6 @@
 
         </div>
         <!-- section-box -->
-
-
 
 
         <!-- section-box -->
@@ -828,12 +855,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Absolute Lume
+                                    <br>
+                                    Ametista
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 55,99
                                 </h5>
 
                             </div>
@@ -860,12 +889,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Absolute Lume
+                                    <br>
+                                    Royal
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 55,99
                                 </h5>
 
                             </div>
@@ -892,12 +923,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Absolute Lume
+                                    <br>
+                                    Clássico
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 55,99
                                 </h5>
 
                             </div>
@@ -924,12 +957,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Absolute Lume
+                                    <br>
+                                    Rosa Petala
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 55,99
                                 </h5>
 
                             </div>
@@ -984,12 +1019,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Musk Lume
+                                    <br>
+                                    Utopia
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 39,99
                                 </h5>
 
                             </div>
@@ -1016,12 +1053,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Musk Lume
+                                    <br>
+                                    Ocean
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 39,99
                                 </h5>
 
                             </div>
@@ -1048,12 +1087,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Musk Lume
+                                    <br>
+                                    Garden
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 39,99
                                 </h5>
 
                             </div>
@@ -1080,12 +1121,14 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Radiante Lume
+                                    Musk Lume
+                                    <br>
+                                    Sky
                                 </h5>
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    R$ 50,00
+                                    R$ 39,99
                                 </h5>
 
                             </div>
