--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Batom
+                                    Matte Lume
                                     <br>
-                                    Radiante Lume
+                                    Vamp
                                 </h5>
 
                             </div>
@@ -249,9 +249,9 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Batom
+                                    Musk Lume
                                     <br>
-                                    Radiante Lume
+                                    Utopia
                                 </h5>
 
                             </div>
@@ -279,9 +279,9 @@
 
                                 <!-- card-title -->
                                 <h5 class="card-title">
-                                    Batom
+                                    Mark Lume
                                     <br>
-                                    Radiante Lume
+                                    Terracota
                                 </h5>
 
                             </div>
